<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_email">Email</string>
    <string name="mail_example">example@example.com</string>
    <string name="user_password">Password</string>
    <string name="password_example">...........</string>
    <string name="sign_in">Sign in </string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_message">Welcome to Frank Shoe Store</string>
    <string name="short_welcome_message">Shop The Biggest Range Of Tommy Hilfiger Clothing, Bags, Shoes, And Accessories Online. Explore This Season\'s Latest Trends With The Newest Collection From Tommy Hilfiger. New Arrivals. Free Shipping. Tommy Icons. Sustainable Style. Cash On Delivery. Tommy Jeans.</string>
    <string name="navigate_to_instructions">Instructions</string>
    <string name="instruction_title">Instructions</string>
    <string name="instruction_details">Say hello to Shop, a digital shopping assistant that brings together the best features of Arrive and Shop Pay (formerly Shopify Pay) to make it easy for customers to speed through checkout, track their order and shipment details, and rediscover brands they love.</string>
    <string name="go_to_shop_list">Shop List</string>
    <string name="add_shoe_item">Add shoe item</string>
    <string name="log_out">Log out</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add Item</string>
    <string name="cancel_item">Cancel</string>
    <string name="fill_missing_data">"Please fill in the missing data "</string>

</resources>
