<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    LinearLayout is used since we are arranging list vertically-->
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_email" />
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/mail_example"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_password" />
    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/login_padding"
        android:inputType="numberPassword"
        android:hint="@string/password_example"/>

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/login_padding"
         android:textColor="@android:color/white"
        android:backgroundTint="#952D2D"
        android:text="@string/sign_in"
        />
    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:backgroundTint="#952D2D"
        android:text="@string/sign_up"
        />

</LinearLayout>
</layout>