<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<!--    LinearLayout is used since we are arranging list vertically-->
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/instruction_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/instruction_details" />
    <Button
        android:id="@+id/shopListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:backgroundTint="#952D2D"
        android:text="@string/go_to_shop_list"

        />

</LinearLayout>
</layout>