<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    LinearLayout is used since we are arranging list vertically-->
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreenFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_message" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/short_welcome_message" />
    <Button
        android:id="@+id/instructionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:backgroundTint="#952D2D"
        android:text="@string/navigate_to_instructions"

        />


</LinearLayout>
</layout>